--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@remix-run/dev": "^1.3.3",
     "@remix-run/eslint-config": "^1.3.3",
     "@remix-run/serve": "^1.3.3",
-    "eslint": "^8.11.0"
+    "eslint": "^8.11.0",
+    "tailwindcss": "^3.0.23"
   },
   "engines": {
     "node": ">=14"
