--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "description": "",
   "license": "",
   "sideEffects": false,
-  
-    "scripts": {
-      "build": "npm run build:css && remix build",
-      "build:css": "tailwindcss -m -i app/styles/input.css -o app/styles/tailwind.css",
-      "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-      "dev:css": "tailwindcss -w -i app/styles/input.css -o app/styles/tailwind.css"
-    },
+  "scripts": {
+    "build": "remix build",
+    "dev": "remix dev",
+    "postinstall": "remix setup node"
+  },
   "dependencies": {
     "@remix-run/react": "^1.3.3",
     "@remix-run/vercel": "^1.3.3",
